--- a/src/App.css
+++ b/src/App.css
@@ -5,24 +5,144 @@ body {
   line-height: 1.4em;
   color: #4d4d4d;
   font-weight: 300;
+  background: #f5f5f5;
+  min-width: 230px;
+  max-width: 550px;
+  margin: 0 auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.input-field {
-  font-size: 18px;
-  padding: 10px 4px;
+.App {
+  background: #fff;
+  margin: 130px 0 40px 0;
+  position: relative;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+}
+
+.App h1 {
+  position: absolute;
+  top: -155px;
+  width: 100%;
+  font-size: 100px;
+  font-weight: 100;
+  text-align: center;
+  color: rgba(175, 47, 47, 0.15);
+  -webkit-text-rendering: optimizeLegibility;
+  -moz-text-rendering: optimizeLegibility;
+  text-rendering: optimizeLegibility;
+}
+
+.input-field, 
+.input-item {
+  padding: 16px 16px 16px 60px;
+  border: none;
+  background: rgba(0, 0, 0, 0.003);
+  box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+  font-size: 24px;
+}
+
+.input-field::placeholder {
+  font-style: italic;
+  color: #d9d9d9;
+}
+
+.main {
+  position: relative;
+  z-index: 2;
+  border-top: 1px solid #e6e6e6;
 }
 
 .todos {
   list-style: none;
-  font-size: 18px;
-  margin-left: 0;
+  font-size: 24px;
+  margin: 0;
   padding-left: 0;
 }
 
-.todo {
+.todos li {
+  position: relative;
+  font-size: 24px;
+  border-bottom: 1px solid #ededed;
+  padding: 12px 3px 5px;
+}
+
+.todo, 
+.filters {
   text-decoration: none;
 }
 
 .todo--completed {
+  color: #d9d9d9;
   text-decoration: line-through;
+}
+
+#checkedAll {
+  background: none;
+  text-align: center;
+  border: none;
+  opacity: 0;
+  position: absolute;
+}
+
+#checkedAll + label {
+  position: absolute;
+  top: -42px;
+  color: #d9d9d9;
+}
+
+#svg {
+  width: 50px;
+  height: 25px;
+}
+
+.container {
+  position: relative;
+}
+
+.container span {
+  position: absolute;
+  left: 7px;
+  top: 4px;
+  height: 28px;
+  width: 28px;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.container span:after {
+  border: 2px solid #fff;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 6px;
+  left: 7px;
+  opacity: 0;
+  position: absolute;
+  top: 8px;
+  transform: rotate(-45deg);
+  width: 12px;
+  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
+
+}
+
+.container input[type="checkbox"] {
+  visibility: hidden;
+}
+
+.container input[type="checkbox"]:checked + span {
+  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
+}
+
+.todos li .label-desc {
+  padding-left: 40px; 
+}
+
+.footer {
+  color: #777;
+  padding: 10px 15px;
+  height: 20px;
+  text-align: center;
+  border-top: 1px solid #e6e6e6;
 }
