--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,14 @@ body {
   padding: 12px 3px 5px;
 }
 
+.todos li .delete {
+  float: right;
+  color: #cc9a9a;
+  border-style: none;
+  background-color: white; 
+  cursor: pointer
+}
+
 .todo, 
 .filters {
   text-decoration: none;
@@ -124,7 +132,6 @@ body {
   transform: rotate(-45deg);
   width: 12px;
   background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
-
 }
 
 .container input[type="checkbox"] {
@@ -133,6 +140,7 @@ body {
 
 .container input[type="checkbox"]:checked + span {
   background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
+  background-position: 4cm 3cm;
 }
 
 .todos li .label-desc {
