--- a/src/App.css
+++ b/src/App.css
@@ -154,3 +154,32 @@ body {
   text-align: center;
   border-top: 1px solid #e6e6e6;
 }
+
+.todo-count {
+  float: left;
+  text-align: left;
+}
+
+footer button {
+  border: none;
+  background: none;
+  color: #777;
+  cursor: pointer;
+}
+
+.filters {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  left: 30%;
+  display: flex;
+  border-color: rgba(175, 47, 47, 0.2);
+}
+
+.delete-all {
+  float: right;
+  position: relative;
+  text-decoration: none;
+  padding-right: 0;
+}
