--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,17 @@
   justify-content: center;
   color: white;
 }
+
+/* 
+ * MainSection 
+ */
+
+.todo {
+  text-decoration: none;
+}
+
+.todo-completed {
+  color: #d9d9d9;
+  text-decoration: line-through;
+}
+
