--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,7 @@
 .App {
+  background: #fff;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);  
+  margin: 130px 0 40px 0;
+  position: relative;
   text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
 }
