--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -20,14 +20,45 @@
     font-weight: inherit;
     line-height: 1.4em;   
     margin: 0;
-    padding: 16px 16px 16px 60px;
+    padding: 16px 0;
     position: relative;
     width: 100%;
+    left: -34px;
 }
 
 .new-todo::placeholder {
     color: #e6e6e6;
     font-style: italic;
     font-weight: 300;
+}
+
+.container-header {
+    display: flex;
+    padding-left: 20px;
+}
+
+.toggle-todos {
+    opacity: 0;
+}
+
+.toggle-todos + label {
+    width: 60px;
+    height: 34px;
+    font-size: 0;
+    position: relative;
+    transform: rotate(90deg);
+    left: -42px;
+    top: 10px;
+}
+
+.toggle-todos + label::before {
+    content: '❯';
+    font-size: 24px;
+    color: #e6e6e6;
+    padding: 10px 27px 10px 27px;
+}
+
+.toggle-todos:checked + label::before {
+    color: #737373;
 }
 
