--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   background: #f5f5f5;
   color: #4d4d4d;
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
   font-weight: 300;
   line-height: 1.4em;
   min-width: 230px;
