--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -13,10 +13,25 @@
 }
   
 .footer .button {
-    border: none;
-    background: none;
     color: #777;
     cursor: pointer;
+    margin: 3px;
+    padding: 3px 7px;
+    text-decoration: none;
+}
+
+.footer .button:focus { 
+    outline: none; 
+}
+
+.selected {
+    border: 1px solid transparent;
+    border-color: rgba(175, 47, 47, 0.2);
+    border-radius: 3px;
+}
+
+.unselected {
+    border: none;
 }
   
 .filters {
@@ -26,13 +41,15 @@
     position: absolute;
     left: 30%;
     display: flex;
-    border-color: rgba(175, 47, 47, 0.2);
 }
   
 .clear-completed {
+    border: none;
+    background: none;
     float: right;
     position: relative;
     text-decoration: none;
-    padding-right: 0;
+    margin: 0;
     padding-top: 1px;
+    padding-right: 0;
 }
