--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -43,7 +43,7 @@
     display: flex;
 }
   
-.clear-completed {
+.footer .clear-completed {
     border: none;
     background: none;
     float: right;
