--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -41,7 +41,7 @@
     opacity: 0;
 }
 
-.toggle-todos + label {
+.label {
     width: 60px;
     height: 34px;
     font-size: 0;
@@ -51,14 +51,19 @@
     top: 10px;
 }
 
-.toggle-todos + label::before {
+.toggleUnselected::before, 
+.toggleSelected::before {
     content: '❯';
     font-size: 24px;
     color: #e6e6e6;
     padding: 10px 27px 10px 27px;
 }
 
-.toggle-todos:checked + label::before {
+.toggleUnselected {
+    color: #e6e6e6;
+}
+
+.toggleSelected::before {
     color: #737373;
 }
 
