--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -9,11 +9,13 @@
     width: 100%;
 }
 
+.header-form {
+    width: 100%;
+}
+
 .new-todo {
     background: rgba(0, 0, 0, 0.003);
     border: none;
-    box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
-    box-sizing: border-box;
     color: inherit;
     font-family: inherit;
     font-size: 24px;
@@ -35,6 +37,8 @@
 .container-header {
     display: flex;
     padding-left: 20px;
+    box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+    box-sizing: border-box;
 }
 
 .toggle-todos {
@@ -55,7 +59,6 @@
 .toggle-selected::before {
     content: '❯';
     font-size: 24px;
-    color: #e6e6e6;
     padding: 10px 27px 10px 27px;
 }
 
