--- a/src/styles/MainSection.css
+++ b/src/styles/MainSection.css
@@ -40,7 +40,7 @@
     position: relative;
 }
   
-.container span {
+.checkmark {
     position: absolute;
     left: 0;
     top: -3.5px;
@@ -55,7 +55,7 @@
     visibility: hidden;
 }
   
-.container input[type="checkbox"]:checked + span {
+.container input[type="checkbox"]:checked + .checkmark {
     background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
     background-position: 4cm 3cm;
 }
@@ -65,10 +65,38 @@
 }
 
 .delete {
-  float: right;
-  color: #cc9a9a;
-  border-style: none;
-  background-color: white; 
-  cursor: pointer;
-  margin-top: 4px;
+    float: right;
+    color: #cc9a9a;
+    border-style: none;
+    background-color: white; 
+    cursor: pointer;
+    margin-top: 4px;
 }
+
+.edit {
+    position: absolute;
+    width: 91%;
+    font-size: 24px;
+    font-family: inherit;
+    font-weight: inherit;
+    line-height: 1.4em;
+    border: 0;
+    color: inherit;
+    border: 1px solid #999;
+    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    top: 0;
+    left: 50px;
+    padding: 11px 5px;
+}
+
+.hidden {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+
+
